fix horizontal scroll on mobile

--- a/src/components/Circles.css
+++ b/src/components/Circles.css
@@ -54,3 +54,12 @@
         transform: translateX(0%);
     }
 }
+
+@media only screen and (max-width: 768px) {
+
+    #landing .circle-wrapper {
+        margin-top: -20%;
+        margin-left: -30%;
+    }
+
+}
